--- a/less/site/variables.less
+++ b/less/site/variables.less
@@ -1,8 +1,9 @@
 // FONTS
-@import url(http://fonts.googleapis.com/css?family=Josefin+Sans);
+@import url(http://fonts.googleapis.com/css?family=Arvo);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:900);
 
-@base-font: 'Josefin Sans', sans-serif;
-@broken-font : 'broken_15regular';
+@base-font: 'Arvo', serif;
+@base-big: 'Source Sans Pro', sans-serif;
 
 @font-size-base: 14px;
 
@@ -15,10 +16,10 @@
 @second: spin(@danger, 300);
 
 @default: #baa;
-@base-1 : #baa;
-@base-2 : #baa;
-@dark: #000;
-@bright: #fff;
+@base-1 : #dde;
+@base-2 : #aab;
+@dark: #333;
+@bright: #eee;
 
 // LAYOUT
 @grid: 12;
