--- a/less/site/after-reset.less
+++ b/less/site/after-reset.less
@@ -162,6 +162,7 @@
 .lnk-primary{.lnk(@primary);}
 .lnk-second	{.lnk(@second);}
 
+.icon{ font-family: 'FontAwesome';}
 
 *{
 	box-sizing: border-box;
