--- a/less/site.less
+++ b/less/site.less
@@ -37,7 +37,7 @@ body{
 	width: @b;
 	height: @b*2;
 }
-nav, .search{
+nav, .searchForm{
    .fix-tl;
    background-color: @bright;
 	z-index: 20;
@@ -81,7 +81,7 @@ nav, .search{
       }
    }
 }
-.search{
+.searchForm{
 	top: @b;
 	&.visible{
 		.shadow;
